# biggame

./: .envrc  Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  flake.nix  fly.client.toml  fly.server.toml  rust-toolchain.toml
bbge/: Cargo.toml  README.md
bbge/src/net/: client.rs  server.rs
client/: Cargo.toml  bindgen.sh  flake.nix  serve.sh
client/.cargo/: config.toml
client/src/: main.rs  net.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
