[package]
name = "bbge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
renet2 = "0.3"
renet2_netcode = { version = "0.3", features = ["serde"] }
renetcode2 = "0.3"
serde = "1"
rmp-serde = "1"
url = "2"

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3", features = ["XmlHttpRequest"] }
wasm-bindgen = "0.2"
wasmtimer = "0.4.1"
serde_json = "1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
warp = { version = "0.3", optional = true }

# features client and server
[features]
default = ["client", "server"]
client = ["renet2_netcode/wt_client_transport"]
server = ["renet2_netcode/wt_server_transport", "renet2_netcode/ws_server_transport", "renet2_netcode/native_transport", "warp"]
