[package]
name = "shooter3"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
macroquad = "0.4"
renet2 = "0.1"
renet2_netcode = { version = "0.1", features = ["serde", "wt_client_transport"] }
renetcode2 = "0.1"
shared = { path = "../shared" }
url = "2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"
console_log = { version = "1", features = ["color"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["XmlHttpRequest"] }
wasm-bindgen = "0.2"
wasmtimer = "0.4.1"
