[package]
name = "shooter3"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
shared = { path = "../shared" }
url = "2"
bbge = { path = "../bbge", default-features = false, features = ["client"] }
log = "0.4.25"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"
console_log = { version = "1", features = ["color"] }
