[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
uuid = "1"
anyhow = "1"
url = "2"
log = "0.4"
bbge = { path = "../bbge", default-features = false, features = ["server"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
env_logger = "0.11.6"
