[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.28", features = ["serde"] }
rand = "0.8.5"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
