[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29", features = ["serde"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom-0-2]
package = "getrandom"
version = "0.2"
features = ["js"]
